feat: support for paper